--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "ระบบดึงข้อมูลบทความจาก ithy.com และโพสต์ไปยัง WordPress อัตโนมัติ พร้อมระบบจัดการการตั้งค่าที่ครบถ้วน",
   "main": "pages/index.js",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,22 +17,25 @@
     "analyze": "cross-env ANALYZE=true next build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "clean": "rm -rf .next out node_modules package-lock.json",
+    "fresh-install": "npm run clean && npm install"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
-    "next": "14.2.29",
-    "react": "^18",
-    "react-dom": "^18"
+    "axios": "1.9.0",
+    "cheerio": "1.0.0-rc.12",
+    "next": "15.3.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.2.29",
-    "cross-env": "^7.0.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.29",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "@next/bundle-analyzer": "15.3.3",
+    "@types/react": "19.1.6",
+    "cross-env": "7.0.3",
+    "eslint": "8.57.0",
+    "eslint-config-next": "15.3.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0"
   },
   "keywords": [
     "web-scraping",
@@ -57,10 +64,6 @@
     "url": "https://github.com/tetipong2542/ithy-data-scraper/issues"
   },
   "homepage": "https://github.com/tetipong2542/ithy-data-scraper#readme",
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -73,4 +76,4 @@
       "last 1 safari version"
     ]
   }
-} 
+}
